Static files management / LessCSS compiler / Bootstrap import

--- a/src/setup.cfg
+++ b/src/setup.cfg
@@ -1,5 +1,5 @@
 [flake8]
 ignore = E128
 max-line-length = 160
-exclude = tests,migrations,.ropeproject
+exclude = tests,migrations,.ropeproject,static
 max-complexity = 12
