unittest forces us to break naming conventions, so ignore errors for them

--- a/src/setup.cfg
+++ b/src/setup.cfg
@@ -1,5 +1,5 @@
 [flake8]
-ignore = E128
+ignore = E128,N802
 max-line-length = 160
 exclude = tests,migrations,.ropeproject,static
 max-complexity = 16
