--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ install:
     - pip install -q -r src/requirements.txt
 before_script:
     - cd src
-    - flake8 --ignore=E128,F403,F401 .
+    - flake8 --ignore=E123,E128,F403,F401,N802 .
     - python manage.py validate
 script:
     - python manage.py test
