--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,6 @@ before_script:
     - python manage.py check
     - python manage.py validate
 script:
-    - python manage.py test
+    - coverage run manage.py test
+after_success:
+    - coveralls
