--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,16 +1,24 @@
+# Functional requirements
 Django>=1.7
 pytz
 django-bootstrap3
+-e git+https://github.com/tixl/django-formset-js.git@master#egg=django-formset-js
+
+# Deployment / static file compilation requirements
 django-compressor
 BeautifulSoup4
 html5lib
 slimit
 lxml
+
+# Debugging requirements
+django-debug-toolbar
+
+# Testing requirements
 pyflakes
 pep8
 pep8-naming
 flake8
-django-debug-toolbar
 coveralls
 coverage
 
