The very basics of the plugin API

--- a/src/.coveragerc
+++ b/src/.coveragerc
@@ -1,5 +1,5 @@
 [run]
-source = tixlbase,tixlcontrol,tixlpresale
+source = tixlbase,tixlcontrol,tixlpresale,tixlplugins
 omit = */migrations/*,*/urls.py,*/tests/*
 
 [report]
