--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -3,6 +3,7 @@ Django>=1.7
 pytz
 django-bootstrap3
 -e git+https://github.com/tixl/django-formset-js.git@master#egg=django-formset-js
+-e git+https://github.com/tixl/cleanerversion.git@tixl#egg=cleanerversion
 
 # Deployment / static file compilation requirements
 django-compressor
