--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -4,9 +4,9 @@ pytz
 django-bootstrap3
 -e git+https://github.com/tixl/django-formset-js.git@master#egg=django-formset-js
 -e git+https://github.com/tixl/cleanerversion.git@tixl#egg=cleanerversion
+django-compressor
 
 # Deployment / static file compilation requirements
-django-compressor
 BeautifulSoup4
 html5lib
 slimit
@@ -27,6 +27,6 @@ flake8
 coveralls
 coverage
 selenium
-PyVirtualDisplay
--e git+https://github.com/tixl/sauceclient.git@master#egg=sauceclient
-travis
+# PyVirtualDisplay
+# -e git+https://github.com/tixl/sauceclient.git@master#egg=sauceclient
+# travis
