--- a/src/.coveragerc
+++ b/src/.coveragerc
@@ -1,6 +1,6 @@
 [run]
 source = pretixbase,pretixcontrol,pretixpresale,pretixplugins
-omit = */migrations/*,*/urls.py,*/tests/*
+omit = */migrations/*,*/urls.py,*/tests/*,*/testdummy/*,*/admin.py
 
 [report]
 exclude_lines =
