Travis currently likes to fail because the tests do not output anything for 10 minutes, more often with Python 3.2 than with others. This could be a problem with our test code, but just as likely a problem with Travis, so we'll try whether a travis_wait command helps.

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,6 @@ before_script:
     - python manage.py check
     - python manage.py validate
 script:
-    - coverage run manage.py test
+    - travis_wait coverage run manage.py test
 after_success:
     - coveralls
