New pep8 version added a warning W503 which we will ignore

--- a/src/setup.cfg
+++ b/src/setup.cfg
@@ -1,5 +1,5 @@
 [flake8]
-ignore = E128,N802
+ignore = E128,N802,W503
 max-line-length = 160
 exclude = migrations,.ropeproject,static
 max-complexity = 16
