--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ install:
     - pip install -q -r src/requirements.txt
 before_script:
     - cd src
-    - flake8 --ignore=E123,E128,F403,F401,N802,C901 .
+    - flake8 --ignore=E123,E128,F403,F401,N802,C901,W503 .
     - python manage.py check
     - python manage.py validate
 script:
