Django 1.8b1 is coming this week, we are ready.
We are, django-debug-toolbar isn't.

--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,5 +1,5 @@
 # Functional requirements
-Django==1.7.3
+Django==1.8a1
 pytz
 django-bootstrap3
 -e git+https://github.com/pretix/django-formset-js.git@master#egg=django-formset-js
