--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,5 +1,5 @@
 # Functional requirements
-Django==1.8b1
+Django==1.8b2
 pytz
 django-bootstrap3
 -e git+https://github.com/pretix/django-formset-js.git@master#egg=django-formset-js
@@ -17,7 +17,7 @@ lxml
 flufl.enum
 
 # Debugging requirements
-django-debug-toolbar
+django-debug-toolbar>=1.3.0
 
 # Testing requirements
 pyflakes
