--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,32 +1,4 @@
-# Functional requirements
-Django==1.8b2
-pytz
-django-bootstrap3
--e git+https://github.com/pretix/django-formset-js.git@master#egg=django-formset-js
--e git+https://github.com/pretix/cleanerversion.git@pretix#egg=cleanerversion
-django-compressor
-
-# Deployment / static file compilation requirements
-BeautifulSoup4
-html5lib
-slimit
-lxml
-
-# Polyfill for Python <3.4
-# Remove this, when Python 3.3 support is dropped
-flufl.enum
-
-# Debugging requirements
-django-debug-toolbar>=1.3.0
-
-# Testing requirements
-pyflakes
-pep8==1.5.7  # exact requirement by flake8 2.4.0
-pep8-naming
-flake8
-coveralls
-coverage
-selenium
-# PyVirtualDisplay
-# -e git+https://github.com/pretix/sauceclient.git@master#egg=sauceclient
-# travis
+-r requirements/production.txt
+-r requirements/py33.txt
+-r requirements/dev.txt
+-r requirements/testing.txt
