Serve static files

--- a/src/setup.cfg
+++ b/src/setup.cfg
@@ -1,5 +1,5 @@
 [flake8]
 ignore = N802,W503
 max-line-length = 160
-exclude = migrations,.ropeproject,static,mt940.py
+exclude = migrations,.ropeproject,static,mt940.py,_static
 max-complexity = 12
