--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ python:
     - "3.4"
 install:
     - pip install -q -r src/requirements.txt
-    - npm install less@2.5.0
+    - npm install -g less@2.5.0
 before_script:
     - cd src
     - flake8 --ignore=E123,F403,F401,N802,C901,W503 .
