--- a/deployment/docker/standalone/Makefile
+++ b/deployment/docker/standalone/Makefile
@@ -1,3 +1,3 @@
 main:
 	#tar ch --exclude=_static --exclude=htmlcov --exclude=db.sqlite3 . | 
-	docker build -t raphaelm/pretix-standalone .
+	docker build -t pretix/standalone .
