Fix travis file

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,6 @@ before_script:
 script:
     - make
     - make compress
-    - coverage run py.test
+    - coverage run -m py.test tests
 after_success:
     - coveralls
