Fixed #73 -- Add memcached configuration options

--- a/deployment/docker/standalone/Dockerfile
+++ b/deployment/docker/standalone/Dockerfile
@@ -3,7 +3,7 @@ FROM debian:jessie
 RUN apt-get update && apt-get install -y supervisor python3 git python3-pip \
 	libxml2-dev libxslt1-dev python-dev python-virtualenv locales libffi-dev \
 	build-essential python3-dev zlib1g-dev libssl-dev npm gettext git \
-	libpq-dev libmysqlclient-dev \ 
+	libpq-dev libmysqlclient-dev libmemcached-dev \
 	--no-install-recommends
 
 WORKDIR /
@@ -27,6 +27,7 @@ WORKDIR /pretix/src
 RUN pip3 install -r requirements.txt
 RUN pip3 install -r requirements/mysql.txt
 RUN pip3 install -r requirements/postgres.txt
+RUN pip3 install -r requirements/memcached.txt
 RUN pip3 install gunicorn
 
 RUN make
