Updated GitLab CI build config

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,6 +20,9 @@ build:
     type: deploy
     script:
         - cd deployment/docker/standalone/
+        - docker login -u ciuser -p $DOCKERPW -e admin@rami.io docker.rami.io
         - docker build -t pretix/standalone .
+        - docker tag pretix/standalone docker.rami.io/pretix/standalone
+        - docker push docker.rami.io/pretix/standalone
     tags:
         - docker
