--- a/src/setup.cfg
+++ b/src/setup.cfg
@@ -9,6 +9,7 @@ combine_as_imports = true
 default_section = THIRDPARTY
 include_trailing_comma = true
 known_first_party = pretix
+known_third_party = versions
 multi_line_output = 5
 not_skip = __init__.py
 skip = make_testdata.py,wsgi.py,bootstrap
