--- a/src/.coveragerc
+++ b/src/.coveragerc
@@ -1,10 +1,11 @@
 [run]
 source = pretix
-omit = */migrations/*,*/urls.py,*/tests/*,*/testdummy/*,*/admin.py,*/mt940.py
+omit = */migrations/*,*/urls.py,*/tests/*,*/testdummy/*,*/admin.py,*/mt940.py,pretix/wsgi.py,pretix/settings.py
 
 [report]
 exclude_lines =
 	pragma: no cover
 	def __str__
+	der __repr__
 	if settings.DEBUG
 	NOQA
