--- a/src/setup.cfg
+++ b/src/setup.cfg
@@ -12,4 +12,4 @@ known_first_party = pretix
 known_third_party = versions
 multi_line_output = 5
 not_skip = __init__.py
-skip = make_testdata.py,wsgi.py,bootstrap
+skip = make_testdata.py,wsgi.py,bootstrap,celery.py
