--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ python:
     - "3.4"
 install:
     - pip install -U pip wheel
-    - pip install -q -r src/requirements.txt -r src/requirements/dev.txt
+    - pip install -q -r src/requirements.txt -r src/requirements/dev.txt -r src/requirements/py34.txt
     - npm install -g less@2.5.0
 before_script:
     - cd src
