--- a/src/MANIFEST.in
+++ b/src/MANIFEST.in
@@ -4,6 +4,7 @@ recursive-include pretix/static.dist *
 recursive-include pretix/locale *
 recursive-include pretix/base/templates *
 recursive-include pretix/control/templates *
+recursive-include pretix/presale/templates *
 recursive-include pretix/plugins/banktransfer/templates *
 recursive-include pretix/plugins/paypal/templates *
 recursive-include pretix/plugins/pretixdroid/templates *
