--- a/src/setup.cfg
+++ b/src/setup.cfg
@@ -1,7 +1,7 @@
 [flake8]
 ignore = N802,W503,E402
 max-line-length = 160
-exclude = migrations,.ropeproject,static,mt940.py,_static,build,make_testdata.py
+exclude = migrations,.ropeproject,static,mt940.py,_static,build,make_testdata.py,tests/settings.py
 max-complexity = 11
 
 [isort]
