--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ sudo: false
 python:
     - "3.4"
 install:
-    - pip install -U pip wheel
+    - pip install -U pip wheel setuptools
     - pip install -q -U -r src/requirements.txt -r src/requirements/dev.txt -r src/requirements/py34.txt
     - npm install -g less@2.5.0
 before_script:
