--- a/src/setup.cfg
+++ b/src/setup.cfg
@@ -10,6 +10,7 @@ default_section = THIRDPARTY
 include_trailing_comma = true
 known_first_party = pretix
 known_third_party = versions
+known_standard_library = typing
 multi_line_output = 5
 not_skip = __init__.py
 skip = make_testdata.py,wsgi.py,bootstrap,celery.py
