Fix #55 -- Datetime picker for input fields

--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,4 @@ src/static/fontawesome/* linguist-vendored
 src/static/lightbox/* linguist-vendored
 src/static/typeahead/* linguist-vendored
 src/static/moment/* linguist-vendored
+src/static/datetimepicker/* linguist-vendored
