Testutils: Do not clutter directory with temporary dirs

--- a/src/setup.cfg
+++ b/src/setup.cfg
@@ -13,4 +13,4 @@ known_third_party = versions
 known_standard_library = typing
 multi_line_output = 5
 not_skip = __init__.py
-skip = make_testdata.py,wsgi.py,bootstrap,celery.py
+skip = make_testdata.py,wsgi.py,bootstrap,celery.py,settings.py
