Fix manual install docs and improve nginx config

--- a/deployment/docker/nginx.conf
+++ b/deployment/docker/nginx.conf
@@ -48,6 +48,14 @@ http {
             expires 7d;
             access_log off;
         }
+        location ^~ /media/cachedfiles {
+            deny all;
+            return 404;
+        }
+        location ^~ /media/invoices {
+            deny all;
+            return 404;
+        }
         location /static/ {
             alias /static/;
             access_log off;
