Docker: Move static files

--- a/deployment/docker/nginx.conf
+++ b/deployment/docker/nginx.conf
@@ -57,7 +57,7 @@ http {
             return 404;
         }
         location /static/ {
-            alias /static/;
+            alias /pretix/src/pretix/static.dist/;
             access_log off;
             expires 365d;
             add_header Cache-Control "public";
