--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,14 @@
 language: python
 sudo: false
 install:
-    - pip install -U pip wheel setuptools==28.6.1
+  - pip install -U pip wheel setuptools==28.6.1
 script:
-    - bash .travis.sh $JOB
+  - bash .travis.sh $JOB
 cache:
-    directories:
-        - $HOME/.cache/pip
+  directories:
+    - $HOME/.cache/pip
+services:
+  - mysql
 matrix:
   include:
     - python: 3.4
@@ -15,6 +17,12 @@ matrix:
       env: JOB=tests PRETIX_CONFIG_FILE=tests/sqlite.cfg
     - python: 3.6
       env: JOB=tests PRETIX_CONFIG_FILE=tests/sqlite.cfg
+    - python: 3.4
+      env: JOB=tests PRETIX_CONFIG_FILE=tests/travis_mysql.cfg
+    - python: 3.5
+      env: JOB=tests PRETIX_CONFIG_FILE=tests/travis_mysql.cfg
+    - python: 3.6
+      env: JOB=tests PRETIX_CONFIG_FILE=tests/travis_mysql.cfg
     - python: 3.4
       env: JOB=style
     - python: 3.4
