Added missing semicolon to docker nginx config

--- a/deployment/docker/nginx.conf
+++ b/deployment/docker/nginx.conf
@@ -26,7 +26,7 @@ http {
 
 	access_log /var/log/nginx/access.log private;
 	error_log /var/log/nginx/error.log;
-	add_header Referrer-Policy same-origin
+	add_header Referrer-Policy same-origin;
 
 	gzip on;
 	gzip_disable "msie6";
