--- a/.gitattributes
+++ b/.gitattributes
@@ -3,6 +3,7 @@ src/static/lightbox/* linguist-vendored
 src/static/typeahead/* linguist-vendored
 src/static/moment/* linguist-vendored
 src/static/datetimepicker/* linguist-vendored
+src/static/colorpicker/* linguist-vendored
 src/static/charts/* linguist-vendored
 
 # Denote all files that are truly binary and should not be modified.
