--- a/deployment/docker-compose/etc/pretix/pretix.cfg
+++ b/deployment/docker-compose/etc/pretix/pretix.cfg
@@ -13,8 +13,11 @@ host=db
 
 [redis]
 location=unix:///tmp/redis.sock?db=0
-sessions=true
+sessions=false
 
 [celery]
 backend=redis+socket:///tmp/redis.sock?virtual_host=1
 broker=redis+socket:///tmp/redis.sock?virtual_host=2
+
+[memcached]
+location=memcached:11211
