--- a/deployment/docker-compose/etc/pretix/pretix.cfg
+++ b/deployment/docker-compose/etc/pretix/pretix.cfg
@@ -12,12 +12,11 @@ password=pretix
 host=db
 
 [redis]
-location=unix:///tmp/redis.sock?db=0
-sessions=false
+location=redis://redis/0
 
 [celery]
-backend=redis+socket:///tmp/redis.sock?virtual_host=1
-broker=redis+socket:///tmp/redis.sock?virtual_host=2
+backend=redis://redis/1
+broker=redis://redis/2
 
 [memcached]
 location=memcached:11211
