git update-index --chmod=+x cron.py & run.sh; removed memcached

--- a/deployment/docker-compose/etc/pretix/pretix.cfg
+++ b/deployment/docker-compose/etc/pretix/pretix.cfg
@@ -13,10 +13,8 @@ host=db
 
 [redis]
 location=redis://redis/0
+session=true
 
 [celery]
 backend=redis://redis/1
 broker=redis://redis/2
-
-[memcached]
-location=memcached:11211
