--- a/deployment/docker-compose/docker-compose.yml
+++ b/deployment/docker-compose/docker-compose.yml
@@ -10,32 +10,46 @@ services:
       - MYSQL_RANDOM_ROOT_PASSWORD=1
     volumes:
       - db-data:/var/lib/mysql
-      
-  memcached:
-    image: memcached
-    container_name: pretix_memcached
-    command: memcached -m 1024m
 
   redis:
     image: redis:latest
     container_name: pretix_redis
-  
-  pretix:
-    image: pretix/standalone
-    container_name: pretix
+
+  pretix_base:
+    build: .
     volumes:
       - pretix-data:/data
-      - ${PWD}/etc/pretix:/etc/pretix
-      - ${PWD}/etc/cron.py:/etc/cron.py
-      - ${PWD}/etc/supervisord.conf:/etc/supervisord.conf
-      - ${PWD}/etc/pretix/pretix.cfg:/etc/pretix/pretix.cfg
-    ports:
-      - "0.0.0.0:80:80"
+
+  pretix_web:
+    extends: pretix_base
+    container_name: pretix_web
     depends_on:
       - db
       - redis
-      - memcached
+    command: ./docker-entrypoint.sh
+    volumes:
+      - ./static:/pretix/src/pretix/static.dist
+
+  pretix_task:
+    extends: pretix_base
+    container_name: pretix_task
+    depends_on:
+      - pretix_web
+    environment:
+      - C_FORCE_ROOT=True
+    command: celery -A pretix.celery_app worker -l info
+
+  nginx:
+    image: nginx:latest
+    ports:
+      - "0.0.0.0:80:80"
+    volumes:
+      - ./static:/static
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+    depends_on:
+      - pretix_web
 
 volumes:
   pretix-data:
+  static-data:
   db-data:
