--- a/deployment/docker-compose/docker-compose.yml
+++ b/deployment/docker-compose/docker-compose.yml
@@ -28,7 +28,7 @@ services:
       - redis
     command: ./docker-entrypoint.sh
     volumes:
-      - ./static:/pretix/src/pretix/static.dist
+      - static-data:/pretix/src/pretix/static.dist
 
   pretix_task:
     extends: pretix_base
@@ -44,7 +44,7 @@ services:
     ports:
       - "0.0.0.0:80:80"
     volumes:
-      - ./static:/static
+      - static-data:/static
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
     depends_on:
       - pretix_web
