[WIP] Implement automatic spell-check for docs
fixes #663

The only thing unclear to me so far is how the output of `make spelling`
should be checked - is there a possibility to check for a file (i.e.
`_build/spelling/output.txt`) to be empty, and report a failed build
otherwise?

--- a/.travis.yml
+++ b/.travis.yml
@@ -36,5 +36,7 @@ matrix:
       env: JOB=tests PRETIX_CONFIG_FILE=tests/travis_postgres.cfg
     - python: 3.6
       env: JOB=plugins
+    - python: 3.6
+      env: JOB=spelling
 addons:
   postgresql: "9.4"
