--- a/deployment/docker-compose/pretix/nginx/nginx.conf
+++ b/deployment/docker-compose/pretix/nginx/nginx.conf
@@ -40,9 +40,6 @@ http {
     server {
         listen 80 default_server;
         listen [::]:80 ipv6only=on default_server;
-        server_name _;
-        index index.php index.html;
-        root /var/www;
 
         location /media/ {
             alias /data/media/;
@@ -64,7 +61,7 @@ http {
             add_header Cache-Control "public";
         }
         location / {
-            proxy_pass http://pretix_web:8000;
+            proxy_pass http://pretix:8000;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         	proxy_set_header Host $http_host;
         }
