--- a/deployment/docker-compose/pretix/pretix/etc/pretix.cfg
+++ b/deployment/docker-compose/pretix/pretix/etc/pretix.cfg
@@ -1,6 +1,6 @@
 [pretix]
 instance_name=My pretix installation
-url=http://127.0.0.1
+url=http://192.168.56.103/
 currency=EUR
 datadir=/data
 
@@ -13,8 +13,16 @@ host=db
 
 [redis]
 location=redis://redis/0
-session=true
+sessions=true
 
 [celery]
 backend=redis://redis/1
 broker=redis://redis/2
+
+[uwsgi]
+http =  0.0.0.0:8000
+master = True
+processes = 4
+threads = 2
+module = pretix.wsgi
+cron = -30 -1 -1 -1 -1 cd /pretix/src && python3 -m pretix runperiodic
