Documentation spellcheck: Compatibility with enchant2

--- a/doc/requirements.txt
+++ b/doc/requirements.txt
@@ -4,4 +4,5 @@ sphinx-rtd-theme
 sphinxcontrib-httpdomain
 sphinxcontrib-images
 sphinxcontrib-spelling
-pyenchant
+# See https://github.com/rfk/pyenchant/pull/130
+git+https://github.com/raphaelm/pyenchant.git@patch-1#egg=pyenchant
