--- a/src/setup.cfg
+++ b/src/setup.cfg
@@ -14,3 +14,29 @@ known_standard_library = typing,enum,mimetypes
 multi_line_output = 5
 not_skip = __init__.py
 skip = make_testdata.py,wsgi.py,bootstrap,celery_app.py,settings.py
+
+[potypo]
+default_language = en_US
+locales_dir = pretix/locale
+no_fail =
+    ar
+    da
+    fr
+    nl
+    pt
+wl_dir = pretix/locale
+edgecase_words =
+    add-ons
+    same-origin"-requests
+    MT940
+    MT940-Format
+    pre-selected
+    pretix.eu
+    pretix.eu-Blog
+    pretix.eu-Server
+    4th
+phrases =
+    ticketing powered by
+    powered by
+chunkers = enchant.tokenize.HTMLChunker
+filters = PythonFormatFilter,enchant.tokenize.URLFilter,HTMLFilter
