add valid wordlists

--- a/src/setup.cfg
+++ b/src/setup.cfg
@@ -27,6 +27,7 @@ no_fail =
 wl_dir = pretix/locale
 edgecase_words =
     add-ons
+    add-on's
     same-origin"-requests
     MT940
     MT940-Format
@@ -34,9 +35,13 @@ edgecase_words =
     pretix.eu
     pretix.eu-Blog
     pretix.eu-Server
+    Prüf-Ergebnisse
+    translate.pretix.eu
     4th
+	214th
 phrases =
     ticketing powered by
     powered by
+    Stripe Connect
 chunkers = enchant.tokenize.HTMLChunker
 filters = PythonFormatFilter,enchant.tokenize.URLFilter,HTMLFilter
