find dict that works for doc-spelling and potypo

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,30 +13,6 @@ services:
 matrix:
   include:
     - python: 3.6
-      env: JOB=tests PRETIX_CONFIG_FILE=tests/travis_sqlite.cfg
-    - python: 3.6
-      env: JOB=tests-cov
-    - python: 3.6
-      env: JOB=style
-    - python: 3.4
-      env: JOB=tests PRETIX_CONFIG_FILE=tests/travis_sqlite.cfg
-    - python: 3.5
-      env: JOB=tests PRETIX_CONFIG_FILE=tests/travis_sqlite.cfg
-    - python: 3.4
-      env: JOB=tests PRETIX_CONFIG_FILE=tests/travis_mysql.cfg
-    - python: 3.5
-      env: JOB=tests PRETIX_CONFIG_FILE=tests/travis_mysql.cfg
-    - python: 3.6
-      env: JOB=tests PRETIX_CONFIG_FILE=tests/travis_mysql.cfg
-    - python: 3.4
-      env: JOB=tests PRETIX_CONFIG_FILE=tests/travis_postgres.cfg
-    - python: 3.5
-      env: JOB=tests PRETIX_CONFIG_FILE=tests/travis_postgres.cfg
-    - python: 3.6
-      env: JOB=tests PRETIX_CONFIG_FILE=tests/travis_postgres.cfg
-    - python: 3.6
-      env: JOB=plugins
-    - python: 3.6
       env: JOB=doc-spelling
     - python: 3.6
       env: JOB=translation-spelling
@@ -46,7 +22,7 @@ addons:
       packages:
           - enchant
           - myspell-de-de
-          - myspell-en-us
+          - aspell-en
 branches:
   except:
   - /^weblate-.*/
