Add badge plugin support to MANIFEST.in

--- a/src/MANIFEST.in
+++ b/src/MANIFEST.in
@@ -18,3 +18,5 @@ recursive-include pretix/plugins/stripe/templates *
 recursive-include pretix/plugins/stripe/static *
 recursive-include pretix/plugins/ticketoutputpdf/templates *
 recursive-include pretix/plugins/ticketoutputpdf/static *
+recursive-include pretix/plugins/badges/templates *
+recursive-include pretix/plugins/badges/static *
