--- a/.travis.yml
+++ b/.travis.yml
@@ -47,6 +47,9 @@ addons:
           - enchant
           - myspell-de-de
           - aspell-en
+          - sqlite3
+      sources:
+          - travis-ci/sqlite3
 branches:
   except:
   - /^weblate-.*/
