--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ matrix:
     - python: 3.6
       env: JOB=tests PRETIX_CONFIG_FILE=tests/travis_sqlite.cfg
     - python: 3.6
-      env: JOB=tests-cov
+      env: JOB=tests-cov PRETIX_CONFIG_FILE=tests/travis_postgres.cfg
     - python: 3.6
       env: JOB=style
     - python: 3.4
@@ -47,9 +47,6 @@ addons:
           - enchant
           - myspell-de-de
           - aspell-en
-          - sqlite3
-      sources:
-          - travis-ci/sqlite3
 branches:
   except:
   - /^weblate-.*/
